[gd_scene load_steps=7 format=3 uid="uid://do1vfguwlpxam"]

[ext_resource type="Script" path="res://Scripts/EnemieMovement.gd" id="1_dqyw2"]
[ext_resource type="Texture2D" uid="uid://cwghainfqfbq5" path="res://Assets/Ennemies.png" id="1_f67pj"]
[ext_resource type="Texture2D" uid="uid://b2cxjuhssif1w" path="res://Assets/PointLight.jpg" id="3_o3fc0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qvx5l"]
atlas = ExtResource("1_f67pj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b30bt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvx5l")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lp4vw"]
size = Vector2(5, 6)

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 11
script = ExtResource("1_dqyw2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_b30bt")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_lp4vw")
debug_color = Color(0, 0.6, 0.701961, 0.301961)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_lp4vw")
debug_color = Color(0.839216, 0, 0.929412, 0)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-0.666667, 5)
color = Color(1, 0.207843, 0, 1)
texture = ExtResource("3_o3fc0")
texture_scale = 0.1

[connection signal="player_damaged" from="." to="." method="_on_player_damaged"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
